--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,9 @@ share/python-wheels/
 *.manifest
 *.spec
 
-# Ignore these folders completely
-input_source/
-output/
+# Ignore validator working folders
+python_validator/input_source/
+python_validator/output/
 
 # Claude configuration
 .claude/
